# designQuestion

./: CMakeLists.txt  DesignAnswer.md  README.md
InvLib/: BookItem.cpp  BookItem.h  CMakeLists.txt  Date.cpp  Date.h  Inventory.cpp  Inventory.h  InventoryItem.cpp  InventoryItem.h  MusicItem.cpp  MusicItem.h
InvTest/: CMakeLists.txt  InvTest01.cpp
LibraryApp/: CMakeLists.txt  LibraryApp.cpp
